--- a/Project 2/Code/KrishokIoT-Android/app/src/main/res/layout/fragment_land.xml
+++ b/Project 2/Code/KrishokIoT-Android/app/src/main/res/layout/fragment_land.xml
@@ -3,41 +3,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="50dp"
     android:layout_gravity="center"
+    android:padding="50dp"
     tools:context=".fragments.HomeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <ScrollView
-        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_gravity="center">
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="vertical"
+            android:layout_height="match_parent"
             android:gravity="center"
-            android:layout_height="match_parent">
+            android:orientation="vertical">
+
             <EditText
+                android:id="@+id/etLand"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Land Type"/>
+                android:hint="Land Type" />
+
             <EditText
+                android:id="@+id/et_sqft"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Square Feet"/>
+                android:hint="Square Feet" />
+
             <EditText
+                android:id="@+id/et_lat"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Latitude"/>
+                android:hint="Latitude" />
+
             <EditText
+                android:id="@+id/et_lon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Logtitude"/>
+                android:hint="Logtitude" />
+
             <Button
+                android:id="@+id/btnSave"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="Save"
-                android:textAllCaps="false"/>
+                android:textAllCaps="false" />
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
